# make-cmake

./: Install_CC_CPU.c  share lib
ch01.gcc/01.build_proc/: main.c
ch01.gcc/02.preprocessor/: 01.define.c  grandparent.h
ch01.gcc/02.preprocessor/include_guard/: child.c
ch01.gcc/03.optionTest/: linker  main.c  mythread.c
ch02.make/01.makefile_order/: 01.GNUmakefile  02.makefile  main.c
ch02.make/02.recipe/: 01.Makefile  02.Makefile  03.Makefile  Makefile  file01
ch02.make/03.variables/: 01.Makefile  02.Makefile  03.Makefile  04-1.Makefile  04.Makefile  05.Makefile  06.Makefile  07.Makefile  08.Makefile  09.Makefile  10.Makefile  11.Makefile  12-1.Makefile  12.Makefile  13.Makefile  Makefile
ch02.make/04.Makefiles/: 00.Makefile  01.Makefile  02.Makefile  03-1.Makefile  03.Makefile  04.Makefile  05.Makefile  06.Makefile  07-1.Makefile  07.Makefile  08.Makefile  09.Makefile  10.Makefile  11.Makefile  12.Makefile
ch02.make/05.functions/: 01.Makefile  02.Makefile  03.Makefile  04.Makefile  05.Makefile  06.Makefile
ch02.make/06.additionals/01.project1/: 01.Makefile  02.Makefile  03.Makefile  04.Makefile  Makefile
ch02.make/06.additionals/02.project2/: 01.Makefile  02.Makefile  03.Makefile
ch02.make/06.additionals/02.project2/appSrc/: Makefile
ch02.make/06.additionals/02.project2/libSrc/: Makefile
ch02.make/06.additionals/03.project3/: Makefile
ch02.make/06.additionals/03.project3/app/player/: Makefile
ch02.make/06.additionals/03.project3/lib/codec/: Makefile
ch02.make/06.additionals/03.project3/lib/db/: Makefile
ch02.make/06.additionals/03.project3/lib/ui/: Makefile
ch03.libs/01.lib-basic/libDynamic/: dltest.c
ch03.libs/01.lib-basic/libSrc/: max.c  min.c
ch03.libs/02.libStatic-make/appSrc/: Makefile
ch03.libs/02.libStatic-make/libStatic/: 01.Makefile  02.Makefile  03.Makefile  04.Makefile  Makefile
ch03.libs/03.libShared-make/appSrc/: Makefile  app.c
ch03.libs/03.libShared-make/libShared/: Makefile
ch03.libs/04.liball-make-recursive/: Makefile
ch03.libs/04.liball-make-recursive/appSrc/: Makefile  app.c
ch03.libs/04.liball-make-recursive/libDynamic/: dltest.c
ch03.libs/04.liball-make-recursive/libShared/: Makefile
ch03.libs/04.liball-make-recursive/libStatic/: Makefile
ch04.cmake/01.basics/bash/: build.sh  delete.sh  test2.c  test3.c
ch04.cmake/01.basics/cmake/: CMakeLists.txt  test1.c
ch04.cmake/01.basics/make/: Makefile
ch04.cmake/02.simple_target/cmake/: CMakeLists.txt  test2.c
ch04.cmake/03-1.add_subdirectory/cmake/: CMakeLists.txt
ch04.cmake/03-1.add_subdirectory/cmake/libs/: CMakeLists.txt  file01
ch04.cmake/03.add_subdirectory/cmake/: CMakeLists.txt  test1.c
ch04.cmake/03.add_subdirectory/cmake/libs/: CMakeLists.txt
ch04.cmake/04.varibales/cmake/: CMakeLists.txt
ch04.cmake/04.varibales/make/: Makefile
ch04.cmake/05.scope/cmake/: CMakeLists.txt
ch04.cmake/05.scope/cmake/mysub/: CMakeLists.txt
ch04.cmake/06.build_config/cmake/: CMakeLists.txt
ch04.cmake/07.cross-compile/cmake/: CMakeLists.txt  myToolchain.cmake
ch04.cmake/08.targets/cmake/: CMakeLists.txt  test1.c
ch04.cmake/08.targets/cmake/libs/: CMakeLists.txt  sum.c
ch04.cmake/08.targets/cmake/srcs/: CMakeLists.txt
ch04.cmake/09.add_custom_target/cmake/: CMakeLists.txt
ch04.cmake/10.add_dependencies/cmake/: CMakeLists.txt
ch04.cmake/11-1.add_custom_command/cmake/: CMakeLists.txt
ch04.cmake/11.add_custom_command/cmake/: CMakeLists.txt  test1.c
ch04.cmake/12.install/cmake/: CMakeLists.txt  test3.c
